--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
     "typescript": "^5.1.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.1",
+    "@babel/preset-env": "^7.22.4",
+    "@babel/preset-react": "^7.22.3",
+    "@babel/preset-typescript": "^7.21.5",
     "@types/jest": "^29.5.2",
+    "babel-jest": "^29.5.0",
     "eslint": "^8.42.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
