--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint": "^8.42.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
+    "jest-html-reporter": "^3.10.0",
     "lint-staged": "^13.2.2",
     "playwright": "^1.34.3",
     "prettier": "^2.8.8"
